diesel-builders/tests/ui/pk_infallible_surrogate_error.stderr
error: Surrogate primary key cannot be marked as infallible
 --> tests/ui/pk_infallible_surrogate_error.rs:7:5
  |
7 | /     #[table_model(infallible)]
8 | |     pub id: i32,
  | |_______________^
